# nncf

./: .buildinfo  .dockerignore  .file-header  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  AI_POLICY.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  ReleaseNotes.md  _version_helper.py  aa_torch_fx.py  activation_sparisty.py  codecov.yml  compare_inference_time.py  constraints.txt  custom_version.py  env_req.txt  example_search_blocks_for_transformers.py  genindex.html  index.html  md_dead_link_check.toml  mypy.ini  objects.inv  old_setup.py  pruning_statistics_ngraph.py  put_some_changes.txt  py-modindex.html  (+21 more)
.ci/: cspell.json  cspell_dict.txt  markdownlint.yaml
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  issue_template.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/action_configs/: labeler.yml
.github/coverage/: tests_python.yml
.github/scripts/: collect_all_requirements.py  override_constraints.py  pytest_md_summary.py  trivy_html.tpl
.github/workflows/: api_changes_check.yml  api_set_label.yml  assign_issue.yml  build_and_publish_doc.yml  build_html_doc.yml  build_schema_page.yml  call_precommit.yml  call_precommit_windows.yml  call_summary.yml  check_documentation.yml  codeql.yml  conformance_ptq.yml  conformance_weight_compression.yml  coverage.yml  examples.yml  executorch.yml  gptqmodel.yml  helper_add_job_link.yml  helper_compare_requirements.yml  install.yml  labeler.yml  macos.yml  model_hub.yml  mypy.yml  nightly.yml  post_pr_merge.yml  pre-commit-linters.yml  pre-commit.yml  precommit.yml  precommit_onnx.yml  python-publish.yml  sdl.yml  sdl_nightly.yml  upload_coverage_for_develop.yml  weekly.yml
_autoapi_templates/: index.html
_autoapi_templates/python/: attribute.html  class.html  data.html  exception.html  function.html  method.html  module.html  package.html  property.html
_sources/_autoapi_templates/: index.rst.txt
_static/: documentation_options.js
autoapi/aggregator/: index.html
autoapi/algorithm/: index.html
autoapi/layer_attributes/: index.html
autoapi/nncf/: index.html
autoapi/nncf_graph_builder/: index.html
autoapi/post_training/: index.html
autoapi/quantize_model/: index.html
autoapi/quantizers/: index.html
autoapi/timm_custom_modules/: index.html
autox/utils/: utils.py
beta/: .pylintrc  CONTRIBUTING.md  README.md  pytest.ini  requirements.txt
beta/examples/: requirements.txt
beta/nncf/: __init__.py  backend.py  version.py
beta/tests/: conftest.py  requirements.txt  sota_checkpoints_eval.json  test_sota_checkpoints.py
docker/: README.md
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: Algorithms.md  ConfigFile.md  Demos.md  FAQ.md  Installation.md  ModelZoo.md  NNCFArchitecture.md  PyPiPublishing.md  Usage.md
docs/accuracy_aware_model_training/: AdaptiveCompressionLevelTraining.md  AdaptiveCompressionTraining.md  EarlyExitTrainig.md  EarlyExitTraining.md
docs/api/: collect_api_entities.py  requirements.txt
docs/compression_algorithms/: BatchnormAdaptation.md  Binarization.md  BlockFloatingPoint.md  CompressWeights.md  KnowledgeDistillation.md  Pruning.md  Quantization.md  Sparsity.md
docs/styleguide/: PyGuide.md
examples/: __init__.py  requirements.txt
licensing/: third-party-programs.txt
nncf/: __init__.py  accuracy_aware_compression.py  algo_selector.py  checkpoint_loading.py  composite_compression.py  compression_method_api.py  config.py  config_schema.py  debug.py  definitions.py  errors.py  exporter.py  functions.py  hw_config.py  hw_config_op_names.py  import_utils.py  initialization.py  kd_loss.py  kd_loss_old.py  layer_utils.py  layers.py  model_creation.py  model_utils.py  module_operations.py  nncf_logger.py  nncf_network.py  parameters.py  progress_bar.py  registry.py  results_caching.py  scopes.py  structures.py  utils.py  version.py  vulnerability.py
nncf/torch/extensions/src/common/cpu/: CMakeLists.txt  CMakelists.txt  tensor_funcs.cpp
nncf/torch/extensions/src/quantization/cpu/: CMakeLists.txt  functions_cpu.cpp
nncf/torch/extensions/src/quantization/cuda/: CMakeLists.txt  functions_cuda.cpp  functions_cuda_impl.cu
schema/: index.html
src/: custom_version.py
tests/: conftest.py  extensions_build_checks.py  helpers.py  install_checks.py  requirements.txt  sota_checkpoints_eval.json  test_algo_common.py  test_api_behavior.py  test_backward_compat.py  test_compressed_graph.py  test_compression_lr_multiplier.py  test_compression_training.py  test_config_schema.py  test_context_independence.py  test_ddp.py  test_distributed_data_parallel_mode.py  test_extensions_build.py  test_frozen_layers.py  test_graph_analysis.py  test_graph_building.py  test_graph_iterator.py  test_helpers.py  test_init_data_loader.py  test_input_management.py  test_install.py  test_kd.py  test_load_model.py  test_matcher.py  test_nncf_network.py  test_nncf_utils.py  test_progress_bar.py  test_sanity_sample.py  test_sanity_third_party.py  test_sota_checkpoints.py  test_trace_tensor.py  test_utils.py
tools/: README.md  add_new_quantization_parameters.py  add_precision_parameter.py  add_qualifiers_to_activation_quantizers.py  benchmark.py  benchmark_binarize_layers.py  benchmark_quantize_layers.py  clip_dot.py  collect_backend_specific_file_names.py  collect_pylint_input_files_for_backend.py  convert_mobilenet_v2_to_torchvision.py  correct_checkpoint.py  create_ov_ptq_model_zoo_table.py  extract_ov_subgraph.py  get_ir_ignored_scope_by_model_id.py  get_ir_is_by_model_id.py  ir_ignored_scope_criterium_search.py  ir_subgraph.py  ir_utils.py  memory_logger.py  memory_monitor.py  onnx_tranformer.py  optimize_tf_graph.py  pb_to_tb.py  profiler.py  render_dot_to_svg.py  requirements.txt  update_eval_results.py  visualize_compression_results.py
(+9265 files in other folders)
